--- a/main.css
+++ b/main.css
@@ -1,3 +1,12 @@
 body{
     background-color: aqua;
 }
+nav bar  ul {
+    list-style: none;
+ 
+ }
+ 
+ li {
+    display: inline;
+    padding: 5px;
+ }
