--- a/executive.css
+++ b/executive.css
@@ -17,7 +17,11 @@ nav bar  ul {
  }
   img{
      width: 98%;
-     height: 240px;
-     padding: 5px;
+     height: auto   ;
+     padding: 0px;
      margin: 0;
+ }
+ .noah-img{
+    border-radius: 50%;
+    float: left;
  }
