--- a/executive.css
+++ b/executive.css
@@ -16,27 +16,17 @@ nav bar  ul {
      align-items: center;
  }
   img{
+     display: flex;
      width: 98%;
-     height: auto;
+     height: 240px;
      padding: 0px;
      margin: 0;
  }
- .collaborator{
-    display: flex;
-    flex: 33%;
-    flex-flow: row wrap;
-    justify-content: space-evenly;
-    padding: 2px;
-}
-.noah-img{
-    flex-basis: 32%;
-    border: 2px;
-    justify-items: baseline;
-    padding: 1px;
-}
-.collaborator .noah-img {
-    width: 100px;
+.flex{
+    width: 200px;
+    height: 200px;
     border-radius: 50%;
     float: left;
-    
+    shape-outside: circle();
+    margin: 30px;
 }
