Adjusted flexbox in css to add spacing and resized images in css and linked to main.css in html.

--- a/newsfeed.css
+++ b/newsfeed.css
@@ -13,7 +13,11 @@
     display: flex;
     flex-flow: row wrap;
     justify-content: space-between;
-    align-content: center;
+    align-items: flex-start;
+}
+
+img {
+    width: 200px;
 }
 
 .card {
