--- a/main.css
+++ b/main.css
@@ -1,3 +1,4 @@
+
 body{
     font-family: 'Montserrat', sans-serif;
 
@@ -20,9 +21,7 @@ body{
     position: relative;
     width: 100%;
     min-height: 700px;
-    background-size: cover;
-    
-    
+    background-size: cover;  
 }
 .main-title{
     text-align: center;
@@ -38,4 +37,12 @@ body{
     color: #f0e4dbe3;
     justify-content: space-evenly;
     list-style: none;
+}
+
+.nav-list a{
+    color: #f0e4dbe3;
+    text-decoration: none;
+}
+.nav-list a:hover{
+    color: coral;
 }
