--- a/newsfeed.css
+++ b/newsfeed.css
@@ -1,4 +1,6 @@
-
+body {
+    background-color: #ffc472;
+}
 .nav--ul {
     list-style: none;
 
@@ -23,9 +25,14 @@ img {
 .card {
     box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
     transition: 0.3s;
+    border: double 5px grey;
     border-radius: 5px; /* 5px rounded corners */
     width: 200px;
     margin: 10px;
     /* padding: 5px; */
   }
-  
+
+ .title-container > .title-header + p {
+     display: flex;
+     justify-content: center;
+ }
