--- a/executive.css
+++ b/executive.css
@@ -1,7 +1,9 @@
 body{
-    background-color: aqua;
+    background-color:#ffc472;
+    font-family: 'Montserrat', sans-serif;
+    font-size: 1.3rem;
 }
-.navbar  ul {
+.nav--ul {
     list-style: none;
  
  }
@@ -32,7 +34,7 @@ body{
     display: inline;
 }
 .pic-city img{
-    justify-content: space-between;
+    justify-content: space-evenly;
     align-items: center;
     text-align: center;
     height: 240px;
