--- a/newsfeed.css
+++ b/newsfeed.css
@@ -1,14 +1,16 @@
 body {
     background-color: #ffc472;
+    font-family: 'Montserrat', sans-serif;
+    font-size: 1.3em;
 }
+
 .nav--ul {
     list-style: none;
-
 }
 
 .nav--li {
     display: inline;
-    padding: 5px;  
+    padding: 5px;
 }
 
 .container {
@@ -23,16 +25,17 @@ img {
 }
 
 .card {
-    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
     transition: 0.3s;
     border: double 5px grey;
-    border-radius: 5px; /* 5px rounded corners */
+    border-radius: 5px;
+    /* 5px rounded corners */
     width: 200px;
     margin: 10px;
     /* padding: 5px; */
-  }
+}
 
- .title-container > .title-header + p {
-     display: flex;
-     justify-content: center;
- }
+.title-container  > h1 + p {
+    display: flex;
+    justify-content: center;
+}
