--- a/career.css
+++ b/career.css
@@ -1,11 +1,74 @@
+body{
+    font-size: 1.2rem;
+    margin: 0px;
+    background-color: #ffc472;
+
+    font-family: 'Montserrat', sans-serif;
+}
+
+.main-container{
+    perspective: 2px;
+    transform-style: preserve-3d;
+    height: 100vh;
+    overflow-x: hidden;
+    overflow-y: scroll;
+}
+
+#top-image{
+    background: url(images/Noah-Bradley_The-Sin-of-Man_Idylls-of-Love_1400x.jpg) no-repeat;
+    position: relative;
+    display: table;
+    background-size: cover;
+    width: 100%;
+    min-height: 400px;
+
+}
+.nav-list{
+    display: flex;
+    flex-direction: row;
+    color: #f0e4dbe3;
+    justify-content: space-evenly;
+    list-style: none;
+}
+
+.nav-list a{
+    color: #f0e4dbe3;
+    text-decoration: none;
+}
+.nav-list a:hover{
+    color: coral;
+}
+
 .published-work{
     display: flex;
     flex-flow: row wrap;
-    
+    justify-content: space-evenly;
+    align-items: flex-start;
 }
 
 .published-work img{
-    max-width: auto;
-    height: 300px;
-    justify-content: center;
+    width: 400px;
 }
+
+.card{
+    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+    transition: 0.3s; 
+    border-radius: 5px; 
+}
+.card:hover {
+    box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
+  }
+
+.black-spacer{
+    margin-top: 10px;
+    width: 100%;
+    min-height: 150px;
+    background-color: #98c2d6ef;
+
+    -moz-box-shadow:    inset 0 0 10px #3b280ca8;
+    -webkit-box-shadow: inset 0 0 10px #3b280ca8;
+    box-shadow:         inset 0 0 10px #3b280ca8;
+  }
+.general-info p{
+      text-align: center;
+  }
