--- a/executive.css
+++ b/executive.css
@@ -5,6 +5,7 @@ body{
 }
 .nav--ul {
     list-style: none;
+    text-align: center;
  
  }
  
@@ -12,7 +13,18 @@ body{
     display: inline;
     padding: 5px;
  }
- .container{
+.container{
+    text-align: center;
+}
+.rounded-img{
+    width: 80%;
+    height: 150px;
+    padding-top: 5px;
+    justify-content: center;
+    align-content: center;
+}
+
+ /* .container{
      display: block;
      justify-content:center;
      align-items: center;
@@ -23,7 +35,7 @@ body{
      padding: 0px;
      margin: auto;
      position: relative;
- }
+ } */
 .flex{
     width: 200px;
     height: 200px;
@@ -33,7 +45,7 @@ body{
 .birth-place{
     display: inline;
 }
-.pic-city img{
+/* .pic-city img{
     justify-content: space-evenly;
     align-items: center;
     text-align: center;
@@ -41,6 +53,15 @@ body{
     object-fit: cover;
     object-position: center;
     align-items: center;
+} */
+.pic-city{
+    display: flex;
+    flex-flow: row wrap;
+    justify-content: space-evenly;
+    align-items: flex-start;
+}
+.pic-city img{
+    width: 400px;
 }
 h1{
     text-align: center;
