--- a/newsfeed.css
+++ b/newsfeed.css
@@ -18,6 +18,7 @@ body {
     flex-flow: row wrap;
     justify-content: space-between;
     align-items: flex-start;
+    text-align: center:
 }
 
 img {
@@ -35,7 +36,7 @@ img {
     /* padding: 5px; */
 }
 
-.title-container  > h1 + p {
-    display: flex;
-    justify-content: center;
+.title-container {
+    /* display: block; */
+    text-align: center;
 }
