--- a/executive.css
+++ b/executive.css
@@ -16,15 +16,8 @@ body{
 .container{
     text-align: center;
 }
-.rounded-img{
-    width: 80%;
-    height: 150px;
-    padding-top: 5px;
-    justify-content: center;
-    align-content: center;
-}
 
- /* .container{
+ .container{
      display: block;
      justify-content:center;
      align-items: center;
@@ -35,7 +28,7 @@ body{
      padding: 0px;
      margin: auto;
      position: relative;
- } */
+ }
 .flex{
     width: 200px;
     height: 200px;
@@ -45,7 +38,7 @@ body{
 .birth-place{
     display: inline;
 }
-/* .pic-city img{
+.pic-city img{
     justify-content: space-evenly;
     align-items: center;
     text-align: center;
@@ -53,7 +46,7 @@ body{
     object-fit: cover;
     object-position: center;
     align-items: center;
-} */
+}
 .pic-city{
     display: flex;
     flex-flow: row wrap;
@@ -64,5 +57,9 @@ body{
     width: 400px;
 }
 h1{
+    text-align: center;
+}
+footer{
+    background-color: black;
     text-align: center;
 }
