--- a/personal.css
+++ b/personal.css
@@ -1,10 +1,12 @@
 body{
     font-family: 'Montserrat', sans-serif;
+    background-color: #ffc472;
 }
 
 .personal {
     display: flex;
     flex-flow: column wrap;
+    padding-left: 8px;
 }
 
 .personal--sub {
@@ -18,4 +20,20 @@ body{
     padding: 0 0 0 10px;
     font-size: 1.5em;
     align-self: center;
+    color: #f0e4dbe3;
+}
+
+.personal--title, .personal--sub {
+    background-color:  #151b159a;
+    
+}
+
+.home{
+    background-image: url("images/personalimage.jpg");
+    background-color: rgba(48, 59, 48, 0.603);
+    display: table;
+    position: relative;
+    width: 100%;
+    min-height: 700px;
+    background-size: cover;  
 }
