--- a/main.css
+++ b/main.css
@@ -21,8 +21,10 @@ body{
     background-color: rgba(48, 59, 48, 0.603);
     display: table;
     position: relative;
-    width: 100%;
-    min-height: 700px;
+    /* width: 100%;
+    min-height: 700px; */
+    width: 100vw;
+    height: 100vh;
     background-size: cover;  
 }
 .main-title{
