--- a/career.css
+++ b/career.css
@@ -2,11 +2,9 @@ body{
     font-size: 1.2rem;
     margin: 0px;
     background-color: #ffc472;
-
     font-family: 'Montserrat', sans-serif;
     color: #d8d6d2;
 }
-
 .main-container{
     perspective: 1px;
     transform-style: preserve-3d;
@@ -17,29 +15,28 @@ body{
 
 #top-image{
     background: url(images/noah-bradley-woman.jpg) no-repeat;
-    -webkit-clip-path: polygon(50% 100%, 0 50%, 0% 0%, 100% 0, 100% 50%);
-clip-path: polygon(50% 100%, 0 50%, 0% 0%, 100% 0, 100% 50%);
+    -webkit-clip-path: polygon(50% 100%, 0 75%, 0% 0%, 100% 0, 100% 75%);
+    clip-path: polygon(50% 100%, 0 75%, 0% 0%, 100% 0, 100% 75%);
     position: relative;
     display: table;
     background-size: cover;
     width: 100%;
     min-height: 700px;
-
 }
-
 .parallax-Container{
     display: flex;
-  flex: 1 0 auto;
-  position: relative;
-  height: 100vh;
-  transform: translateZ(-1px) scale(2);
-  z-index: -1;
+    flex: 1 0 auto;
+    position: relative;
+    height: 100vh;
+    transform: translateZ(-1px) scale(2);
+    z-index: -1;
 }
-
 .content-Container{
     display: block;
-  position: relative;
-  z-index: 1;
+    padding: 20px;
+    position: relative;
+    z-index: 1;
+    background-color: #3b280ca8;
 }
 .nav-list{
     display: flex;
@@ -49,7 +46,6 @@ clip-path: polygon(50% 100%, 0 50%, 0% 0%, 100% 0, 100% 50%);
     list-style: none;
     margin-top: 50px;
 }
-
 .nav-list a{
     color: #f0e4dbe3;
     text-decoration: none;
@@ -57,14 +53,12 @@ clip-path: polygon(50% 100%, 0 50%, 0% 0%, 100% 0, 100% 50%);
 .nav-list a:hover{
     color: coral;
 }
-
 .published-work{
     display: flex;
     flex-flow: row wrap;
     justify-content: space-evenly;
     align-items: flex-start;
 }
-
 .published-work img{
     width: 400px;
 }
@@ -89,9 +83,9 @@ clip-path: polygon(50% 100%, 0 50%, 0% 0%, 100% 0, 100% 50%);
     box-shadow:         inset 0 0 10px #3b280ca8;
   }
 .general-info p{
-      text-align: center;
+    text-align: center;
   }
 
-  .bg-box{
-      background-color: #3b280ca8;
+.bg-box{
+    background-color: #3b280ca8;
   }
